<resources>
    <string name="app_name">TheRickAndMortyApp</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="dummy_description">Dummy description</string>
    <string name="dummy_title">Dummy title</string>

    <string name="item_character_specie_title">Specie:</string>
    <string name="item_character_type_title">Type:</string>
    <string name="character_creation_date">Created at: %1$s</string>
    <string name="character_type_description">Status: %1$s - %2$s</string>
    <string name="character_gender_description">Gender: %1$s</string>
    <string name="character_episodes_list">List of episodes:</string>
    <string name="default_value_option">Unknown</string>
</resources>
