<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen16"
            android:layout_marginVertical="@dimen/dimen8"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen8"
                android:background="?attr/selectableItemBackgroundBorderless">

                <ImageView
                    android:id="@+id/ivCover"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/dimen8"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_logo" />

                <TextView
                    android:id="@+id/tvName"
                    style="@style/Title"
                    android:layout_width="250dp"
                    android:layout_marginStart="24dp"
                    android:text="@string/dummy_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivCover"
                    app:layout_constraintTop_toTopOf="@+id/ivCover" />

                <TextView
                    android:id="@+id/tvStatus"
                    style="@style/Paragraph"
                    android:text="@string/dummy_description"
                    app:layout_constraintStart_toStartOf="@+id/tvName"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvSpecieTitle"
                    style="@style/SubTitle"
                    android:layout_marginTop="@dimen/dimen8"
                    android:text="@string/item_character_specie_title"
                    app:layout_constraintStart_toStartOf="@+id/tvStatus"
                    app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

                <TextView
                    android:id="@+id/tvSpecie"
                    style="@style/Paragraph"
                    android:layout_marginStart="@dimen/dimen4"
                    android:text="@string/dummy_description"
                    app:layout_constraintBottom_toBottomOf="@+id/tvSpecieTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvSpecieTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvSpecieTitle" />

                <TextView
                    android:id="@+id/tvTypeTitle"
                    style="@style/SubTitle"
                    android:layout_marginTop="@dimen/dimen4"
                    android:text="@string/item_character_type_title"
                    app:layout_constraintStart_toStartOf="@+id/tvSpecieTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvSpecie" />

                <TextView
                    android:id="@+id/tvType"
                    style="@style/Paragraph"
                    android:layout_marginStart="@dimen/dimen4"
                    android:text="@string/dummy_description"
                    app:layout_constraintBottom_toBottomOf="@+id/tvTypeTitle"
                    app:layout_constraintStart_toEndOf="@+id/tvTypeTitle"
                    app:layout_constraintTop_toTopOf="@+id/tvTypeTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
